# ticketboard

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  REVIEW.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vite.config.ts
scripts/: capture-readme-screenshots.mjs  generate-workflow-brief.mjs  verify-ui.mjs  verify-workflow-brief.py  watch-workflow-brief.mjs
server/: __init__.py  app.py  collectors.py  store.py  types.py  workflow_brief.py
src/: App.tsx  Markdown.tsx  styles.css  theme.tsx  types.ts
