[project]
name = "ticketboard-backend"
version = "0.1.0"
description = "Local Python backend for the Ticketboard dashboard"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.124.0",
  "httpx>=0.28.0",
  "orjson>=3.11.9",
  "pydantic>=2.12.0",
  "python-dotenv>=1.2.2",
  "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
  "ruff>=0.14.0",
]

[tool.ruff]
line-length = 96
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
